[package]
authors = ["Jørgen Nordmoen <jorgen.nordmoen@gmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "A platform agnostic driver to interface the HC-SR04 (ultrasonic distance sensor)"
documentation = "https://docs.rs/hc-sr04"
keywords = ["embedded-hal-driver", "ultrasonic distance", "sensor"]
license = "MIT/Apache-2.0"
name = "hc-sr04"
readme = "README.md"
repository = "https://github.com/nordmoen/hc-sr04"
version = "0.1.0"

[dependencies]
embedded-hal = "0.1.2"
nb = "0.1.1"
stm32f30x-hal = "0.1.2"

[dev-dependencies]
cortex-m = "0.4.1"
cortex-m-rtfm = "0.3.1"

[dev-dependencies.cortex-m-rt]
features = ["abort-on-panic"]
version = "0.3.13"

[dev-dependencies.f3]
features = ["rt"]
version = "0.5.3"

[dev-dependencies.stm32f30x-hal]
features = ["rt"]
version = "0.1.2"

[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
debug = true
lto = true
