[package]
authors = ["Jørgen Nordmoen <jorgen.nordmoen@gmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "A platform agnostic driver to interface the HC-SR04 (ultrasonic distance sensor)"
documentation = "https://docs.rs/hc-sr04"
keywords = ["embedded-hal-driver", "ultrasonic distance", "sensor"]
license = "MIT/Apache-2.0"
name = "hc-sr04"
readme = "README.md"
repository = "https://github.com/nordmoen/hc-sr04"
version = "0.1.0"
edition = "2018"

[dependencies]
embedded-hal = "0.2.2"
nb = "0.1.1"

[dependencies.void]
default-features = false
version = "1.0.2"

[dev-dependencies]
cortex-m = "0.5.8"
cortex-m-rtfm = "0.4.0"
cortex-m-rt = "0.6.7"
panic-itm = "0.4.0"

[target.thumbv7em-none-eabihf.dev-dependencies.f3]
features = ["rt"]
version = "0.6.1"

[target.thumbv7em-none-eabihf.dev-dependencies.stm32f30x-hal]
features = ["rt"]
version = "0.2.0"

[target.thumbv7m-none-eabi.dev-dependencies.stm32f103xx]
features = ["rt"]
version = "0.11.0"

[target.thumbv7m-none-eabi.dev-dependencies.stm32f103xx-hal]
git = "https://github.com/japaric/stm32f103xx-hal"

[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
debug = true
lto = true
